# openbrain

./: CMakeLists.txt  Messages.sh  README  aimlparser.cpp  aimlparser.h  bugs  changelog  index.html  openbrain.cpp  openbrain.h  openbrain_export.h  openbrainconfig.ui  plasma-applet-openbrain.desktop
openbrain_configuration/.svn/: entries
openbrain_configuration/aiml/: default
openbrain_configuration/aiml/.svn/: entries
openbrain_configuration/aiml/.svn/text-base/: default.svn-base
openbrain_configuration/aiml/Justice/: ALICE.aiml  Animations.aiml  Atomic.aiml  AtomicSpeechParticles.aiml  C.aiml  Computers.aiml  CoreVariablePredicates.aiml  Currency.aiml  Date.aiml  DaysToXMas.aiml  Drug.aiml  FindInFilesystem.aiml  Human.aiml  HumanProblems.aiml  Insults.aiml  K.aiml  M.aiml  Misspelled.aiml  Money.aiml  N.aiml  OnThisDay.aiml  P.aiml  Penguin.aiml  Psychology.aiml  Q.aiml  Reductions.aiml  Religion.aiml  Salutations.aiml  Science.aiml  Seasons.aiml  Sex.aiml  SpeechReductions.aiml  Sports.aiml  Star.aiml  Stories.aiml  SystemBadAnswer.aiml  SystemConfiguration.aiml  SystemDraft.aiml  SystemExtraReductions.aiml  SystemReduction.aiml  (+11 more)
openbrain_configuration/aiml/Justice/.svn/: entries
openbrain_configuration/aiml/Justice/.svn/text-base/: A.aiml.svn-base  (+49 more)
openbrain_configuration/scripts/.svn/: entries
openbrain_configuration/scripts/.svn/text-base/: AddressFinder.svn-base  removedot.svn-base
openbrain_configuration/utils/: bot.xml
openbrain_configuration/utils/.svn/: entries
openbrain_configuration/utils/.svn/text-base/: vars.xml.svn-base
